public/main.css
/* ... */
.flex-card * {
	color: var(--secondary-text-color);
}

/* form */
form {
	text-align: left;
}
.description {
	font-size: calc((0.9 - 1) * 1.2vw + 1rem);
	opacity: 0.7;
}
fieldset {
	border: 0px solid white;
	border: 0px solid var(--background-color);
	padding: 0;
}
fieldset,
form .margin {
	margin-bottom: 24px;
}
input,
textarea {
	-webkit-border-radius: 0.6rem; /*Safari, Chrome*/
	-moz-border-radius: 0.6rem; /*Firefox*/
	border-radius: 0.6rem;
	font: inherit;
	width: 100%;
	background-color: #040531;
	background-color: var(--secondary-background-color);
	color: white;
	color: var(--secondary-text-color);
	border: 0 solid transparent;
	padding: 1.3rem;
}
input:invalid {
	/*border: red solid 3px;*/
}
input.button {
	width: auto;
}
.city {
	float: left;
	width: 70%;
}
.state {
	float: right;
	width: 28%;
}
.zip {
	width: 36%;
}
.phone {
	width: 100%;
}
textarea {
	height: 100px;
}
select {
	font: inherit;
	font-size: calc((0.9 - 1) * 1.2vw + 1rem);
}
#messagecontainer {
	background-color: #0a0b52; /* fallback */
	background-color: var(--nav-background-color);
	color: white; /* fallback */
	color: var(--nav-text-color);
	font-weight: 300;
	text-align: center;
	width: 100%;
	max-width: 1900px;
	padding: 3%;
	-webkit-border-radius: 0.5rem; /*Safari, Chrome*/
	-moz-border-radius: 0.5rem; /*Firefox*/
	border-radius: 0.5rem;
	/* position */
	position: fixed;
	bottom: 0px;
	z-index: 1001;
}
#messagecontainer p {
	margin: 0 0 1rem 0;
}
#messagecontainer p:last-child {
	margin: 0;
}
#messagecontainer .close {
	background-color: transparent;
	color: inherit;
	border: none;
	outline: none;
	position: absolute;
	top: 0;
	right: 0;
	height: 30px;
	width: 30px;
	padding: 0px;
	text-align: center;
	/* animation */
	transition: 0.1s opacity linear;
}
#messagecontainer .close:hover {
	opacity: 0.6;
}
#messagecontainer .button {
	background-color: #040531; /* fallback */
	background-color: var(--secondary-background-color);
	color: white; /* fallback */
	color: var(--secondary-text-color);
}
#messagecontainer.confirmation {
	border: 2px solid #4bd800;
	color: white;
	color: var(--secondary-text-color);
}
#messagecontainer.tryagain {
	border: 2px solid red;
	color: white;
	color: var(--secondary-text-color);
}

/* specific form */
#newsletter-form {
	width: 100%;
}
#newsletter-form #email {
	width: 90%;
	margin-bottom: 10px;
}

/* header */
header {
	position: relative;
}
.header-title {
	margin: 3vh auto;
	text-align: center;
	font-weight: 900;
}
#header-nav {
	position: fixed;
	top: 0;
	left: 0;
	right: 0;
	height: 100vh;
	z-index: 1;
	display: none;
	text-align: center;
	margin: 0;
}
#header-nav.toggled-on {
	display: block;
}
#header-nav ul {
	display: flex;
	flex-direction: column;
	justify-content: center;
	padding: 0;
	margin: 0;
	height: 100%;
}
#header-nav li {
	display: inline-block;
	padding: 2vh;
	font-size: 6vh;
}
/* mobile menu */
#menu-button {
	cursor: pointer;
	position: fixed;
	top: 0;
	left: 0;
	z-index: 2;
	margin: 0.5vh;
	/* background */
	padding: 5px 10px;
	background-color: #0a0b52;
	-webkit-border-radius: 0.5rem; /*Safari, Chrome*/
	-moz-border-radius: 0.5rem; /*Firefox*/
	border-radius: 0.5rem;
}
div[class*="bar"] {
	width: 35px;
	height: 5px;
	background-color: black;
	background-color: var(--text-color);
	margin: 6px 0;
	transition: 0.4s transform ease, 0.4s opacity ease;
}
.bar1 {
	margin-top: 0;
}
.bar3 {
	margin-bottom: 0;
}
/* Rotate first bar */
.cross .bar1 {
	-webkit-transform: rotate(-45deg) translate(-9px, 6px);
	transform: rotate(-45deg) translate(-9px, 6px);
}
/* Fade out the second bar */
.cross .bar2 {
	opacity: 0;
}
/* Rotate last bar */
.cross .bar3 {
	-webkit-transform: rotate(45deg) translate(-8px, -8px);
	transform: rotate(45deg) translate(-8px, -8px);
}

/* footer */
footer {
	flex-shrink: 0;
}
footer > div {
	padding: 0 3vw 3.3vmax 3vw;
}
footer h4:first-child {
	margin-top: 0;
}
footer strong {
	font-size: calc((1.5 - 1) * 1.2vw + 1rem);
}
#footer-form {
	padding-bottom: 3%;
}
#footer-nav {
	padding-top: 2%;
}
footer > div > p {
	margin: 0;
	padding: 2%;
	text-align: left;
}
footer a:not(.fa) {
	border-bottom: 1px solid white;
	border-bottom: 1px solid var(--secondary-text-color);
}
#footer-form .flex-container {
	align-items: center;
}
footer > div > p:last-child {
	text-align: center;
}

p:last-child {
	margin-bottom: 0;
}

/* colors */
.inverted-color {
	background-color: #040531;
	background-color: var(--secondary-background-color);
	color: white;
	color: var(--secondary-text-color);
}
.inverted-color * {
	color: white;
	color: var(--secondary-text-color);
}
.inverted-color .button,
.inverted-color button {
	background-color: #0a0b52;
	background-color: var(--nav-background-color);
}
.inverted-color input,
.inverted-color textarea {
	background-color: #0a0b52;
	background-color: var(--nav-background-color);
}
.inverted-color div[class*="bar"] {
	background-color: white;
	background-color: var(--secondary-text-color);
}
#header-nav {
	background-color: #0a0b52;
	background-color: var(--nav-background-color);
}

/* embellishments */
[class^="img-divider"] {
	position: relative;
	left: 0;
	right: 0;
	width: 100%;
	display: block;
	z-index: -1;
}
.img-divider-top {
	bottom: -2px;
}
.img-divider-bottom {
	top: -2px;
}
hr {
	border: 2px solid #040531;
	border: 2px solid var(--secondary-background-color);
}
.inverted-color hr {
	border: 2px solid #0a0b52;
	border: 2px solid var(--nav-background-color);
}

/* icons */
.material-icons {
	font-size: 24px;
	vertical-align: middle;
}
.material-icons {
	font-feature-settings: "liga";
} /* Support for IE. */
.fa {
	color: black;
	color: var(--text-color);
	margin-right: 14px;
	padding: 2px;
}
.inverted-color .fa {
	color: white;
	color: var(--secondary-text-color);
}

.alignleft {
	float: left;
}
.aligntextleft {
	text-align: left;
}
.aligncenter {
	text-align: center;
	margin: 0 auto;
}
.centertext {
	text-align: center;
}
.alignvertical {
	position: relative;
	top: 50%;
	transform: translate(0, -50%);
}
/* ... */

